[package]
name = "http_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2", "tracing"]}
hyper = "0.14.27"
pretty-hex = "0.3.0"
tokio = { version = "1.32.0", features = ["macros", "rt"]}
